# airhealth-miniproject

./: .env.example  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dashboard/: app.py
databricks/notebooks/: 00_setup.py  01_ingest.py  02_load_warehouse.py  03_train_models.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql  surrogate_key.sql
dbt/models/gold/: _gold.yml  dim_date.sql  dim_location.sql  fact_air_quality_daily.sql  mart_health_air_quality.sql
dbt/models/marts/: dim_date.sql
dbt/models/silver/: _bronze_sources.yml  int_daily_metrics.sql  stg_air_quality.sql  stg_county_annual.sql  stg_demographics.sql  stg_health.sql  stg_weather.sql
dbt/models/staging/: _sources.yml  stg_air_quality.sql  stg_county_annual.sql  stg_demographics.sql  stg_health.sql  stg_weather.sql
dbt/seeds/: metros.csv
dbt/tests/generic/: test_positive.sql
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  databricks.md  findings.md
ds/: forecast_pm25.py  regression_asthma.py  run_models.py  tracking.py  warehouse.py
infra/terraform/: main.tf
ingestion/: extractors.py  load_warehouse.py  run_ingest.py
ingestion/common/: config.py  http.py  io.py  locations.py  sample.py  schemas.py
orchestration/airflow/dags/: airhealth_pipeline.py
tests/: test_ingestion.py
