[project]
name = "airhealth"
version = "0.1.0"
description = "Air Quality & Respiratory Health Analytics Platform — a DE/DS/DA portfolio project"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["ingestion", "ds"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
