[project]
name = "airhealth"
version = "0.1.0"
description = "Air Quality & Respiratory Health Analytics Platform — a DE/DS/DA portfolio project"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["ingestion", "ds"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Databricks notebooks intentionally interleave %pip/env cells before imports
# and use injected globals (spark, dbutils, display); don't lint them as modules.
extend-exclude = ["databricks/notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
